@@ -1,5 +1,8 @@
 
 
+[COLOR grey][Date: 2013.09.04][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.5
+
 [COLOR grey][Date: 2013.08.25][/COLOR][COLOR black][Post: 2][/COLOR]
 [COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.4 (Testing)
 
